[package]
name = "wk-371tti-net-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
ego-tree = { version = "0.10.0", optional = true }
env_logger = { version = "0.11.8", optional = true }
futures = { version = "0.3.31", optional = true }
kurosabi = { version = "0.5.4", optional = true }
scraper = { version = "0.24.0", optional = true }
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", branch = "main", features = [], optional = true }
serde = { version = "1.0", features = ["derive", "rc"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["json"] }
urlencoding = "2.1.3"

[features]
default = [
    "ego-tree",
    "env_logger",
    "futures",
    "kurosabi",
    "scraper",
    "chromiumoxide",
]
lib = []

