[package]
name = "wk-371tti-net-crawler"
version = "0.1.2"
edition = "2024"

[dependencies]
ego-tree = "0.10.0"
env_logger = "0.11.8"
futures = "0.3.31"
kurosabi = "0.5.4"
scraper = "0.24.0"
serde = { version = "1.0", features = ["derive", "rc"] }
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", branch = "main", features = [] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["json"] }
urlencoding = "2.1.3"

[features]
standalone = []